syntax = "proto3";

package product;

service productService {
    rpc getProduct (ProductRequest) returns (ProductResponse) {};
}

message ProductRequest {
    int32 productId = 1;
}

message ProductResponse {
    int32 productId = 1;
    string name = 2;
    int32 price = 3;
}
